sdk/translation/ai-translation-text-rest/samples/v2/javascript/README.md
---
page_type: sample
languages:
  - javascript
products:
  - azure
  - azure-cognitive-services
  - azure-translator
urlFragment: ai-translation-text-javascript
---

# Azure Text Translation Service client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for Azure Text Translation Service in some common scenarios.

| **File Name**                                                   | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| --------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [getLanguages.js][getlanguages]                                 | This sample demonstrates how to make a simple call to the Azure Text Translator service to get a list of supported languages                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [getLanguagesAcceptLanguage.js][getlanguagesacceptlanguage]     | This sample demonstrates how you can select the language to use for user interface strings. Some of the fields in the response are names of languages or names of regions. Use this parameter to define the language in which these names are returned. The language is specified by providing a well-formed BCP 47 language tag. For instance, use the value `fr` to request names in French or use the value `zh-Hant` to request names in Chinese Traditional. Names are provided in the English language when a target language is not specified or when localization is not available.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [getLanguagesScope.js][getlanguagesscope]                       | This sample demonstrates how to make a simple call to the Azure Text Translator service to get a list of supported languages for a selected scope                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [translate.js][translate]                                       | This sample demonstrates how to make a simple call to the Azure Text Translator service to get translation for a text which language is know to a target language.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [translateCustom.js][translatecustom]                           | This sample demonstrates how You can get translations from a customized system built with Custom Translator (https://learn.microsoft.com/azure/cognitive-services/translator/customization). Add the Category ID from your Custom Translator [project details](https://learn.microsoft.com/azure/cognitive-services/translator/custom-translator/how-to-create-project#view-project-details) to this parameter to use your deployed customized system. It is possible to set `allowFalback` paramter. It specifies that the service is allowed to fall back to a general system when a custom system doesn't exist. Possible values are: `true` (default) or `false`. `allowFallback=false` specifies that the translation should only use systems trained for the category specified by the request. If a translation for language X to language Y requires chaining through a pivot language E, then all the systems in the chain (X → E and E → Y) will need to be custom and have the same category. If no system is found with the specific category, the request will return a 400 status code. `allowFallback=true` specifies that the service is allowed to fall back to a general system when a custom system doesn't exist. |
| [translateDetection.js][translatedetection]                     | This sample demonstrates how to make a simple call to the Azure Text Translator service to get translation without specifying the source language to a target language.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [translateDictionary.js][translatedictionary]                   | This sample demonstrates how to keep words if you already know the translation you want to apply to a word or a phrase, you can supply it as markup within the request. The dynamic dictionary is safe only for compound nouns like proper names and product names. Note You must include the From parameter in your API translation request instead of using the autodetect feature.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [translateMultipleSources.js][translatemultiplesources]         | This sample demonstrates how to make a simple call to the Azure Text Translator service to get translation for a multiple text fields and each input text is in different language.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [translateMultipleTargets.js][translatemultipletargets]         | This sample demonstrates how you can provide multiple target languages which results to each input element be translated to all target languages.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [translateNoTranslate.js][translatenotranslate]                 | This sample demonstrates how it's sometimes useful to exclude specific content from translation. You can use the attribute class=notranslate to specify content that should remain in its original language. In the following example, the content inside the first div element won't be translated, while the content in the second div element will be translated.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [translateProfanity.js][translateprofanity]                     | This sample demonstrates how to change the profanity handling during translate call. Normally the Translator service will retain profanity that is present in the source in the translation. The degree of profanity and the context that makes words profane differ between cultures, and as a result the degree of profanity in the target language may be amplified or reduced. If you want to avoid getting profanity in the translation, regardless of the presence of profanity in the source text, you can use the profanity filtering option. The option allows you to choose whether you want to see profanity deleted, whether you want to mark profanities with appropriate tags (giving you the option to add your own post-processing), or you want no action taken. The accepted values of `ProfanityAction` are `Deleted`, `Marked` and `NoAction` (default).                                                                                                                                                                                                                                                                                                                                                          |
| [translateTextType.js][translatetexttype]                       | This sample demonstrates how you can select whether the translated text is plain text or HTML text. Any HTML needs to be a well-formed, complete element. Possible values are: plain (default) or html.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [translateWithLlm.js][translatewithllm]                         | This sample demonstrates how to perform translation with a LLM deployment. By default, Azure Translator uses neural Machine Translation (NMT) technology. With the newest preview release, you now can optionally select either the standard NMT translation or Large Language Model (LLM) models — GPT-4o-mini or GPT-4o. You can choose a large language model for translation based on factors such as quality, cost, and other considerations. However, using an LLM model requires you to have a [Microsoft Foundry resource]. https://learn.microsoft.com/azure/ai-services/translator/how-to/create-translator-resource?tabs=foundry To use an LLM model for translation, set the `deploymentName` property in the `TranslationTarget` object to the name of your Foundry resource deployment, e.g., `gpt-4o-mini` or `gpt-4o`. You can also configure the tone and gender of the translation by setting the `tone` and `gender` properties.                                                                                                                                                                                                                                                                                   |
| [translateWithTransliteration.js][translatewithtransliteration] | You can combine both Translation and Transliteration in one Translate call. Your source Text can be in non-standard Script of a language as well as you can ask for non-standard Script of a target language.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [transliterate.js][transliterate]                               | This sample demonstrates how to make a simple call to the Azure Text Translator service to convert characters or letters of a source language to the corresponding characters or letters of a target language.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] and the following Azure resources to run these sample programs:

- [Translator resource instance][createinstance_translatorresourceinstance]

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node getLanguages.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env TEXT_TRANSLATION_ENDPOINT="<text translation endpoint>" node getLanguages.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[getlanguages]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/getLanguages.js
[getlanguagesacceptlanguage]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/getLanguagesAcceptLanguage.js
[getlanguagesscope]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/getLanguagesScope.js
[translate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translate.js
[translatecustom]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateCustom.js
[translatedetection]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateDetection.js
[translatedictionary]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateDictionary.js
[translatemultiplesources]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateMultipleSources.js
[translatemultipletargets]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateMultipleTargets.js
[translatenotranslate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateNoTranslate.js
[translateprofanity]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateProfanity.js
[translatetexttype]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateTextType.js
[translatewithllm]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateWithLlm.js
[translatewithtransliteration]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/translateWithTransliteration.js
[transliterate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/translation/ai-translation-text-rest/samples/v2/javascript/transliterate.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure-rest/ai-translation-text
[freesub]: https://azure.microsoft.com/free/
[createinstance_translatorresourceinstance]: https://learn.microsoft.com/azure/cognitive-services/Translator/create-translator-resource
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/translation/ai-translation-text-rest/README.md
